test/errors/error16.base
The module named 'NonExisting' could not be found
fun foo() {
   val x = NonExisting.foo();
           ^^^^^^^^^^^^^^^
